[package]
name = "moro"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nikomatsakis/moro"
readme = "README.md"
description = "Experimental structured concurrency support for async Rust (similar to trio's nurseries)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
async-channel = "1.6"
async-trait = "0.1.56"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1.17.0", features = ["full"] }
